// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > inferencing > postInference > 200 > ok 1`] = `
{
  "inference": {
    "_id": "test",
  },
}
`;

exports[`routes > inferencing > postInference > audit > expected call 1`] = `
{
  "_id": "test",
  "toObject": [MockFunction spy],
}
`;
